[package]
name = "messenger_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-rustls = "0.26.2"
rustls = "0.23.25"
webpki-roots = "0.26.8"
rustls-pemfile = "2.2.0"
tokio-postgres = "0.7"
bb8 = "0.9"
bb8-postgres = "0.9"
dotenv = "0.15"
